correction to RJ-2022-051 author field

--- a/_articles/RJ-2022-051/Cahusac.tex
+++ b/_articles/RJ-2022-051/Cahusac.tex
@@ -245,7 +245,7 @@ The likelihoodR package described in this article provides a large number of fun
 \end{figure}
 \pagebreak
 \bibliography{Cahusac}
-\address{
+\address{Peter Cahusac\\
   Department of Pharmacology \& Biostatistics\\
   College of Medicine, Alfaisal University, Riyadh\\
   And Department of Comparative Medicine\\
