--- a/_articles/RJ-2022-051/RJ-2022-051.Rmd
+++ b/_articles/RJ-2022-051/RJ-2022-051.Rmd
@@ -7,11 +7,12 @@ abstract: ' The **likelihoodR** package has been developed to allow users to obt
   calculator for *t* tests, based upon the concepts of strength of evidence, and the
   probabilities of misleading and weak evidence. '
 author:
-- name: Department of Pharmacology & Biostatistics
-  affiliation: College of Medicine, Alfaisal University, Riyadh
+- name: Peter Cahusac
+  affiliation: Department of Pharmacology & Biostatistics
   email: |
     pcahusac@alfaisal.edu
   address:
+  - College of Medicine, Alfaisal University, Riyadh
   - And Department of Comparative Medicine
   - King Faisal Specialist Hospital & Research Centre, Riyadh
   - Kingdom of Saudi Arabia
@@ -19,8 +20,8 @@ author:
 date: '2022-12-20'
 date_received: '2021-12-06'
 journal:
-  firstpage: 203
-  lastpage: 213
+  firstpage: ~
+  lastpage: []
 volume: 14
 issue: 3
 slug: RJ-2022-051
@@ -38,8 +39,6 @@ output:
     legacy_pdf: yes
 
 ---
-
-
 
 
 # Introduction
