fixed affiliation for cahusac

--- a/_articles/RJ-2022-051/RJ-2022-051.Rmd
+++ b/_articles/RJ-2022-051/RJ-2022-051.Rmd
@@ -8,20 +8,20 @@ abstract: ' The **likelihoodR** package has been developed to allow users to obt
   probabilities of misleading and weak evidence. '
 author:
 - name: Peter Cahusac
-  affiliation: Department of Pharmacology & Biostatistics
+  affiliation: College of Medicine, Alfaisal University, Riyadh
   email: |
     pcahusac@alfaisal.edu
   address:
-  - College of Medicine, Alfaisal University, Riyadh
+  - Department of Pharmacology & Biostatistics
   - And Department of Comparative Medicine
   - King Faisal Specialist Hospital & Research Centre, Riyadh
   - Kingdom of Saudi Arabia
   - ORCiD 0000-0003-4976-2834
-date: '2022-12-20'
+date: '2023-01-13'
 date_received: '2021-12-06'
 journal:
-  firstpage: ~
-  lastpage: []
+  firstpage: 203
+  lastpage: 213
 volume: 14
 issue: 3
 slug: RJ-2022-051
@@ -39,6 +39,8 @@ output:
     legacy_pdf: yes
 
 ---
+
+
 
 
 # Introduction
