--- a/_articles/RJ-2022-051/RJ-2022-051.Rmd
+++ b/_articles/RJ-2022-051/RJ-2022-051.Rmd
@@ -7,16 +7,17 @@ abstract: ' The **likelihoodR** package has been developed to allow users to obt
   calculator for *t* tests, based upon the concepts of strength of evidence, and the
   probabilities of misleading and weak evidence. '
 author:
-- name: Department of Pharmacology & Biostatistics
+- name: Peter Cahusac
   affiliation: College of Medicine, Alfaisal University, Riyadh
   email: |
     pcahusac@alfaisal.edu
   address:
+  - Department of Pharmacology & Biostatistics
   - And Department of Comparative Medicine
   - King Faisal Specialist Hospital & Research Centre, Riyadh
   - Kingdom of Saudi Arabia
   - ORCiD 0000-0003-4976-2834
-date: '2022-12-20'
+date: '2023-01-13'
 date_received: '2021-12-06'
 journal:
   firstpage: 203
