--- a/articles/RJ-2022-051/Cahusac.tex
+++ b/articles/RJ-2022-051/Cahusac.tex
@@ -245,9 +245,9 @@ The likelihoodR package described in this article provides a large number of fun
 \end{figure}
 \pagebreak
 \bibliography{Cahusac}
-\address{
-  Department of Pharmacology \& Biostatistics\\
+\address{Peter Cahusac\\
   College of Medicine, Alfaisal University, Riyadh\\
+  Department of Pharmacology \& Biostatistics\\
   And Department of Comparative Medicine\\
   King Faisal Specialist Hospital \& Research Centre, Riyadh\\
   Kingdom of Saudi Arabia\\
