update affliliation for one article

--- a/_articles/RJ-2022-042/RJ-2022-042.Rmd
+++ b/_articles/RJ-2022-042/RJ-2022-042.Rmd
@@ -15,35 +15,35 @@ abstract: ' New distributions are still being suggested for better fitting of a 
   R codes. '
 author:
 - name: Yu-Hyeong Jang
-  affiliation: Department of Statistics
+  affiliation: Korea University
   email: |
     jyhmaru@gmail.com
   address:
-  - Korea University
+  - Department of Statistics
   - Seoul, Republic of Korea
 - name: SungBum Kim
-  affiliation: Department of Applied Statistics
+  affiliation: Konkuk University
   email: |
     kimsb0707@hanmail.net
   address:
-  - Konkuk University
+  - Department of Applied Statistics
   - Seoul, Republic of Korea
 - name: Hyun-Ju Jung
-  affiliation: Department of Applied Statistics
+  affiliation: Konkuk University
   email: |
     jhjstat@hanmail.net
   address:
-  - Konkuk University
+  - Department of Applied Statistics
   - Seoul, Republic of Korea
 - name: Hyoung-Moon Kim (Corresponding author)
-  affiliation: Department of Applied Statistics
+  affiliation: Konkuk University
   email: |
     hmkim@konkuk.ac.kr
   address:
-  - Konkuk University
+  - Department of Applied Statistics
   - Seoul, Republic of Korea
   - (https://orcid.org/0000-0002-6014-5207)
-date: '2022-12-20'
+date: '2023-01-17'
 date_received: '2020-10-30'
 journal:
   firstpage: 13
