updated editor to SU and AE list

--- a/index.Rmd
+++ b/index.Rmd
@@ -91,20 +91,19 @@ The R Journal was established in 2009, superseding the [R News](http://www.r-pro
 
 ### Editor-in-Chief
 
-Catherine Hurley, Maynooth University, Ireland 
+Simon Urbanek, The University of Auckland, New Zealand
 r-journal@r-project.org
 
 ### Executive editors
 
-- Simon Urbanek, The University of Auckland, New Zealand
-- Di Cook, Monash University, Australia
+- Rob Hyndman, Monash University, Australia
 - Mark van der Loo, Statistics Netherlands, The Netherlands
+- Catherine Hurley, Maynooth University, Ireland 
 
 ### Associate editors
 
 - Rafael de Andrade Moral, Maynooth University, Ireland
 - Louis Aslett, Durham University, UK 
-- Elizabeth Atkinson, Mayo Clinic, USA
 - Rasmus Bååth, Lund University, Sweden
 - Przemek Biecek, University of Warsaw, Poland
 - Simone Blomberg, University of Queensland, Australia
@@ -114,7 +113,6 @@ r-journal@r-project.org
 - Xiaoyue Cheng, University of Nebraska, Omaha, USA
 - Katarina Domijan, Maynooth University, Ireland
 - Isabella Gollini, University College Dublin, Ireland
-- Kieran Healy, Duke University, USA
 - Michael Kane, Yale University, USA
 - Adam Loy, Carleton College, USA 
 - Elizabeth Sweeney, University of Pennsylvania, USA
@@ -122,7 +120,6 @@ r-journal@r-project.org
 - Emi Tanaka, Monash University, Australia
 - Nicholas Tierney, Telethon Kids, Australia
 - Susan Vanderplas, University of Nebraska, Lincoln, USA
-- Earo Wang, The University of Auckland, New Zealand
 - Emily Zabor, The Cleveland Clinic and Tassig Cancer Institute, USA
 
 ### Editorial advisory board
