--- a/index.Rmd
+++ b/index.Rmd
@@ -97,7 +97,7 @@ r-journal@r-project.org
 ### Executive editors
 
 - Rob Hyndman, Monash University, Australia
-- Mark van der Loo, Statistics Netherlands, The Netherlands
+- Mark van der Loo, Statistics Netherlands and University of Leiden, The Netherlands
 - Catherine Hurley, Maynooth University, Ireland 
 
 ### Associate editors
