--- a/_articles/RJ-2023-015/RJ-2023-015.Rmd
+++ b/_articles/RJ-2023-015/RJ-2023-015.Rmd
@@ -1,5 +1,5 @@
 ---
-title: Bootstrapping Clustered Data in R using \pkg{lmeresampler}
+title: Bootstrapping Clustered Data in R using lmeresampler
 author:
 - name: Adam Loy
   affiliation: Carleton College
