update of cran news

--- a/_news/RJ-2022-4-cran/RJ-2022-4-cran.Rmd
+++ b/_news/RJ-2022-4-cran/RJ-2022-4-cran.Rmd
@@ -35,7 +35,6 @@ journal:
 
 
 
-
 ```{r global_options, include=FALSE, message=FALSE}
 knitr::opts_chunk$set(fig.pos = 'H')
 ```
@@ -134,7 +133,8 @@ offers these mirrors in preference to the others which are not fully secured (ye
 ```{r cran_views_data, include=FALSE}
 ## generate via cran_views(new = c("Agriculture", "MixedModels", "Phylogenetics"))
 cran_views <- readRDS("cran_views.rds")
-cran_views$active <- cran_views$ntotal/as.numeric(cran_zoo[Sys.Date()])
+# cran_views$active <- cran_views$ntotal/as.numeric(cran_zoo[Sys.Date()])
+cran_views$active <- cran_views$ntotal/as.numeric(tail(cran_zoo, 1))
 ```
 
 ```{r cran_views_new, echo=FALSE, results="asis"}
