--- a/index.Rmd
+++ b/index.Rmd
@@ -131,6 +131,7 @@ r-journal@r-project.org
 ### Associate editors
 
 - Rafael de Andrade Moral, Maynooth University, Ireland
+- Vincent Arel-Bundock, University of Montreal, Canada
 - Louis Aslett, Durham University, UK 
 - Rasmus Bååth, Lund University, Sweden
 - Przemek Biecek, University of Warsaw, Poland
