--- a/articles/RJ-2023-015/RJ-2023-015.tex
+++ b/articles/RJ-2023-015/RJ-2023-015.tex
@@ -1,5 +1,5 @@
 % !TeX root = RJwrapper.tex
-\title{Bootstrapping Clustered Data in R using \pkg{lmeresampler}}
+\title{Bootstrapping Clustered Data in R using lmeresampler}
 \author{by Adam Loy and Jenna Korobova}
 
 \maketitle
