--- a/news/RJ-2022-4-cran/cran.tex
+++ b/news/RJ-2022-4-cran/cran.tex
@@ -94,7 +94,7 @@ Currently there are 42~task views (see \url{https://cran.r-project.org/web/views
 with median and mean numbers of CRAN packages covered
 103 and~116, respectively.
 Overall, these task views cover 4050~CRAN packages,
-which is about \% of all active CRAN packages.
+which is about 21\% of all active CRAN packages.
 
 
 \address{%
