Update style file for legacy site

--- a/share/RJournal.sty
+++ b/share/RJournal.sty
@@ -4,9 +4,15 @@
 %
 % Originally written by Kurt Hornik and Friedrich Leisch with subsequent 
 % edits by the editorial board
+%
+% CAUTION:
+% Do not modify this style file. Any changes to this file will be reset when your
+% article is submitted.
+% If you must modify the style or add LaTeX packages to the article, these 
+% should be specified in RJwrapper.tex
 
 \NeedsTeXFormat{LaTeX2e}[1995/12/01]
-\ProvidesPackage{RJournal}[2013/08/27 v0.13 RJournal package]
+\ProvidesPackage{RJournal}[2022/06/27 v0.14 RJournal package]
 
 \RequirePackage{tikz}
 
@@ -97,7 +103,7 @@
 
 \usepackage[medium]{titlesec}
 \usepackage{titletoc}
-\titleformat{\section}   {\normalfont\large\bfseries}{}{0em}{}
+\titleformat{\section}   {\normalfont\large\bfseries}{\arabic{section}}{1em}{}
 \titleformat{\subsection}{\normalfont\normalsize\bfseries}{}{0em}{}
 \titlecontents{chapter}   [0em]{}{}{}{\titlerule*[1em]{.}\contentspage}
 
