--- a/_articles/RJ-2023-012/RJ-2023-012.Rmd
+++ b/_articles/RJ-2023-012/RJ-2023-012.Rmd
@@ -20,18 +20,19 @@ author:
   - Department of Quantitative Economics
   - 6200 MD Maastricht
   - The Netherlands
-- name: KU Leuven
-  affiliation: Department of Mathematics
+- name: ''
+  affiliation: KU Leuven
   email: |
     jakob.raymaekers@kuleuven.be
   address:
+  - Department of Mathematics
   - 3001 Leuven
   - Belgium
 date: '2023-02-10'
 date_received: '2021-02-22'
 journal:
   firstpage: 38
-  lastpage: 49
+  lastpage: 50
 volume: 14
 issue: 4
 slug: RJ-2023-012
@@ -49,7 +50,6 @@ output:
     legacy_pdf: yes
 
 ---
-
 
 
 
