--- a/_articles/RJ-2023-013/RJ-2023-013.Rmd
+++ b/_articles/RJ-2023-013/RJ-2023-013.Rmd
@@ -1,5 +1,5 @@
 ---
-title: Generalized Mosaic Plots in the \pkg{ggplot2} Framework
+title: Generalized Mosaic Plots in the ggplot2 Framework
 abstract: "Graphical methods for categorical variables are not well developed when
   compared with visualizations for numeric data. One method available for  multidimensional
   categorical data visualizations is mosaic plots. Mosaic plots are an easy and powerful
