--- a/_articles/RJ-2023-013/RJ-2023-013.tex
+++ b/_articles/RJ-2023-013/RJ-2023-013.tex
@@ -1,5 +1,5 @@
 % !TeX root = RJwrapper.tex
-\title{Generalized Mosaic Plots in the \pkg{ggplot2} Framework}
+\title{Generalized Mosaic Plots in the ggplot2 Framework}
 \author{by Haley Jeppson and Heike Hofmann}
 
 \maketitle
