--- a/articles/RJ-2023-012/raymaekers.tex
+++ b/articles/RJ-2023-012/raymaekers.tex
@@ -239,6 +239,8 @@ The fast implementation of these popular slope estimators unlocks new possibilit
 
 \bibliography{raymaekers}
 
+		
+
 \address{Jakob Raymaekers\\
   Maastricht University \\
   Department of Quantitative Economics\\
@@ -246,7 +248,7 @@ The fast implementation of these popular slope estimators unlocks new possibilit
   The Netherlands\\
   \email{j.raymaekers@maastrichtuniversity.nl}\\ }
 	
-\address{KU Leuven \\
+\address{ \\ KU Leuven \\
 Department of Mathematics\\
  3001 Leuven\\
   Belgium\\
