--- a/_articles/RJ-2023-012/RJ-2023-012.Rmd
+++ b/_articles/RJ-2023-012/RJ-2023-012.Rmd
@@ -14,25 +14,24 @@ abstract: ' Modern use of slope estimation often involves the (repeated) estimat
   values in the data set. '
 author:
 - name: Jakob Raymaekers
-  affiliation: Maastricht University
-  email: j.raymaekers@maastrichtuniversity.nl
-  address:
-  - Department of Quantitative Economics
-  - 6200 MD Maastricht
-  - The Netherlands
-- name: ''
-  affiliation: KU Leuven
-  email: |
+  affiliation: Maastricht University and KU Leuven
+  email:
+  - j.raymaekers@maastrichtuniversity.nl
+  - |
     jakob.raymaekers@kuleuven.be
   address:
-  - Department of Mathematics
+  - Maastricht University, Department of Quantitative Economics
+  - 6200 MD Maastricht
+  - The Netherlands
+  - also
+  - KU Leuven, Department of Mathematics
   - 3001 Leuven
   - Belgium
-date: '2023-02-10'
+date: '2023-03-09'
 date_received: '2021-02-22'
 journal:
   firstpage: 38
-  lastpage: 50
+  lastpage: 49
 volume: 14
 issue: 4
 slug: RJ-2023-012
@@ -50,6 +49,7 @@ output:
     legacy_pdf: yes
 
 ---
+
 
 
 
