--- a/articles/RJ-2023-012/raymaekers.tex
+++ b/articles/RJ-2023-012/raymaekers.tex
@@ -239,15 +239,16 @@ The fast implementation of these popular slope estimators unlocks new possibilit
 
 \bibliography{raymaekers}
 
+		
+
 \address{Jakob Raymaekers\\
-  Maastricht University \\
-  Department of Quantitative Economics\\
+  Maastricht University and KU Leuven \\
+  Maastricht University, Department of Quantitative Economics\\
  6200 MD Maastricht\\
   The Netherlands\\
-  \email{j.raymaekers@maastrichtuniversity.nl}\\ }
-	
-\address{KU Leuven \\
-Department of Mathematics\\
+  \email{j.raymaekers@maastrichtuniversity.nl}\\
+  also \\
+KU Leuven, Department of Mathematics\\
  3001 Leuven\\
   Belgium\\
   \email{jakob.raymaekers@kuleuven.be}}
