--- a/articles/RJ-2023-013/RJ-2023-013.tex
+++ b/articles/RJ-2023-013/RJ-2023-013.tex
@@ -1,5 +1,5 @@
 % !TeX root = RJwrapper.tex
-\title{Generalized Mosaic Plots in the \pkg{ggplot2} Framework}
+\title{Generalized Mosaic Plots in the ggplot2 Framework}
 \author{by Haley Jeppson and Heike Hofmann}
 
 \maketitle
@@ -898,10 +898,7 @@ This manuscript is based on version 0.3.3 of the \pkg{ggmosaic} package. It can 
 \newpage
 
 \hypertarget{references}{%
-\section{References}\label{references}}
-
-\hypertarget{references-1}{%
-\section*{References}\label{references-1}}
+\section*{References}\label{references}}
 \addcontentsline{toc}{section}{References}
 
 \hypertarget{refs}{}
