Fixed some typos in index.Rmd.

--- a/index.Rmd
+++ b/index.Rmd
@@ -56,7 +56,7 @@ p > span.doi, td > span.doi {
 
 The R Journal is the peer-reviewed, open-access scientific journal, published by The R Foundation. It features short to medium length articles (up to 20 pages) covering topics of interest to users and developers of R. For example, description and implementation details of R packages, surveys or reviews of R software related to a particular area, applications of R software or descriptions of teaching resources related to R. 
 
-The R Journal reaches a wide audience and has a thorough review process. It has a generally increasing [SJR impact factor](https://www.scimagojr.com/journalsearch.php?q=21100255423&amp;tip=sid&amp;exact=no). Papers are expected to be concise, clearly written, not too technical, clearly related R, and follow reproducible practices. Additional technical details and examples could be included as supplementary material. Authors of refereed articles should take care to:
+The R Journal reaches a wide audience and has a thorough review process. It has a generally increasing [SJR impact factor](https://www.scimagojr.com/journalsearch.php?q=21100255423&amp;tip=sid&amp;exact=no). Papers are expected to be concise, clearly written, not too technical, clearly related to R, and follow reproducible practices. Additional technical details and examples could be included as supplementary material. Authors of refereed articles should take care to:
 
 * put their contribution in context, in particular discuss related R functions or packages;
 * explain the motivation for their contribution;
@@ -85,12 +85,12 @@ The R Journal accepts a variety of article topics including:
 
 ## History
 
-The R Journal was established in 2009, superseding the [R News](http://www.r-project.org/doc/Rnews/index.html).  For historical purposes it also a news section, that includes items from R Core, updates from CRAN and Bioconductor, foRwards activiies and conference reports.
+The R Journal was established in 2009, superseding the [R News](http://www.r-project.org/doc/Rnews/index.html).  For historical purposes it also a news section, that includes items from R Core, updates from CRAN and Bioconductor, foRwards activities and conference reports.
 
 ## R Journal article summaries, for the last four years
 
 The R Journal receives a large number of submissions, currently over 200 a year, and processing times and especially review times are highly variable. The summaries below shows that for published articles, the time from first submission to accept averages at under a year.
-Just a very small number of 2021 submissions await a final decision, and even for 2022 submission, the majority of  articles have received an accept/reject decision.
+Just a very small number of 2021 submissions await a final decision, and even for 2022 submissions, the majority of  articles have received an accept/reject decision.
 
 ```{r, echo=FALSE, eval=FALSE}
 # To update plots below, run from the articles project. The code uses tablulate_articles, which runs only from articles.
@@ -112,7 +112,7 @@ knitr::include_graphics(c("resources/time_to_accept_plot.png",
 ```
 
 For published articles in the years `r years`, the boxplots show time from submission to accept by year of publication. Median number of days to accept is under a year. The barchart on the right refers to articles submitted in the years `r years`, and reports the status as
-as rejected, in progress or accepted/published as of `r Sys.Date()`. Papers labelled 'in progress' are under review or awaiting revisions. 
+rejected, in progress or accepted/published as of `r Sys.Date()`. Papers labelled 'in progress' are under review or awaiting revisions. 
 
 
 ## Editorial board
