2023-1 post-preview updates

--- a/_articles/RJ-2023-031/RJ-2023-031.Rmd
+++ b/_articles/RJ-2023-031/RJ-2023-031.Rmd
@@ -14,10 +14,10 @@ abstract: Systems that rely on forecasts to make decisions, e.g. control or ene
   in energy systems, but can easily be applied for online forecasting in all fields.
 author:
 - name: Peder Bacher
-  affiliation: Dynamical Systems
+  affiliation: |-
+    Dynamical Systems, Department of Applied Mathematics and Computer
+    Science, Technical University of Denmark
   address:
-  - Department of Applied Mathematics and Computer Science
-  - Technical University of Denmark
   - Asmussens Allé, Building 303B
   - 2800 Kgs. Lyngby, Denmark
   - 'E-mail: email:pbac@dtu.dk'
@@ -25,10 +25,10 @@ author:
     URL:
     <https://www.compute.dtu.dk/english/research/research-sections/dynsys/>
 - name: Hjörleifur G. Bergsteinsson
-  affiliation: Dynamical Systems
+  affiliation: |-
+    Dynamical Systems, Department of Applied Mathematics and Computer
+    Science, Technical University of Denmark
   address:
-  - Department of Applied Mathematics and Computer Science
-  - Technical University of Denmark
   - Asmussens Allé, Building 303B
   - 2800 Kgs. Lyngby, Denmark
   - 'E-mail: email:hgbe@dtu.dk'
@@ -36,10 +36,10 @@ author:
     URL:
     <https://www.compute.dtu.dk/english/research/research-sections/dynsys/>
 - name: Linde Frölke
-  affiliation: Dynamical Systems
+  affiliation: |-
+    Dynamical Systems, Department of Applied Mathematics and Computer
+    Science, Technical University of Denmark
   address:
-  - Department of Applied Mathematics and Computer Science
-  - Technical University of Denmark
   - Asmussens Allé, Building 303B
   - 2800 Kgs. Lyngby, Denmark
   - 'E-mail: email:hgbe@dtu.dk'
@@ -47,10 +47,10 @@ author:
     URL:
     <https://www.compute.dtu.dk/english/research/research-sections/dynsys/>
 - name: Mikkel L. Sørensen
-  affiliation: Dynamical Systems
+  affiliation: |-
+    Dynamical Systems, Department of Applied Mathematics and Computer
+    Science, Technical University of Denmark
   address:
-  - Department of Applied Mathematics and Computer Science
-  - Technical University of Denmark
   - Asmussens Allé, Building 303B
   - 2800 Kgs. Lyngby, Denmark
   - 'E-mail: email:mliso@dtu.dk'
@@ -58,10 +58,10 @@ author:
     URL:
     <https://www.compute.dtu.dk/english/research/research-sections/dynsys/>
 - name: Julian Lemos-Vinasco
-  affiliation: Dynamical Systems
+  affiliation: |-
+    Dynamical Systems, Department of Applied Mathematics and Computer
+    Science, Technical University of Denmark
   address:
-  - Department of Applied Mathematics and Computer Science
-  - Technical University of Denmark
   - Asmussens Allé, Building 303B
   - 2800 Kgs. Lyngby, Denmark
   - 'E-mail: email:jlvi@dtu.dk'
@@ -69,10 +69,10 @@ author:
     URL:
     <https://www.compute.dtu.dk/english/research/research-sections/dynsys/>
 - name: Jon Liisberg
-  affiliation: Dynamical Systems
+  affiliation: |-
+    Dynamical Systems, Department of Applied Mathematics and Computer
+    Science, Technical University of Denmark
   address:
-  - Department of Applied Mathematics and Computer Science
-  - Technical University of Denmark
   - Asmussens Allé, Building 303B
   - 2800 Kgs. Lyngby, Denmark
   - 'E-mail: email:jlvi@dtu.dk'
@@ -80,10 +80,10 @@ author:
     URL:
     <https://www.compute.dtu.dk/english/research/research-sections/dynsys/>
 - name: Jan Kloppenborg Møller
-  affiliation: Dynamical Systems
+  affiliation: |-
+    Dynamical Systems, Department of Applied Mathematics and Computer
+    Science, Technical University of Denmark
   address:
-  - Department of Applied Mathematics and Computer Science
-  - Technical University of Denmark
   - Asmussens Allé, Building 303B
   - 2800 Kgs. Lyngby, Denmark
   - 'E-mail: email:jkmo@dtu.dk'
@@ -99,10 +99,10 @@ author:
   - |
     URL: <https://www.enfor.dk>
 - name: Henrik Madsen
-  affiliation: Dynamical Systems
+  affiliation: |-
+    Dynamical Systems, Department of Applied Mathematics and Computer
+    Science, Technical University of Denmark
   address:
-  - Department of Applied Mathematics and Computer Science
-  - Technical University of Denmark
   - Asmussens Allé, Building 303B
   - 2800 Kgs. Lyngby, Denmark
   - 'E-mail: email:hmad@dtu.dk'
