--- a/_articles/RJ-2023-031/onlineforecast.tex
+++ b/_articles/RJ-2023-031/onlineforecast.tex
@@ -1637,9 +1637,7 @@ This actually opens up the possibilities for self-tuned variable forgetting
 
 \address{
 Peder Bacher\\
-Dynamical Systems\\
-Department of Applied Mathematics and Computer Science\\
-Technical University of Denmark\\
+Dynamical Systems, Department of Applied Mathematics and Computer Science, Technical University of Denmark\\
 Asmussens Allé, Building 303B\\
 2800 Kgs. Lyngby, Denmark\\
 E-mail: \email{pbac@dtu.dk}\\
@@ -1648,9 +1646,7 @@ URL: \url{https://www.compute.dtu.dk/english/research/research-sections/dynsys/}
 
 \address{
 Hjörleifur G. Bergsteinsson\\
-Dynamical Systems\\
-Department of Applied Mathematics and Computer Science\\
-Technical University of Denmark\\
+Dynamical Systems, Department of Applied Mathematics and Computer Science, Technical University of Denmark\\
 Asmussens Allé, Building 303B\\
 2800 Kgs. Lyngby, Denmark\\
 E-mail: \email{hgbe@dtu.dk}\\
@@ -1659,9 +1655,7 @@ URL: \url{https://www.compute.dtu.dk/english/research/research-sections/dynsys/}
 
 \address{
 Linde Frölke\\
-Dynamical Systems\\
-Department of Applied Mathematics and Computer Science\\
-Technical University of Denmark\\
+Dynamical Systems, Department of Applied Mathematics and Computer Science, Technical University of Denmark\\
 Asmussens Allé, Building 303B\\
 2800 Kgs. Lyngby, Denmark\\
 E-mail: \email{hgbe@dtu.dk}\\
@@ -1670,9 +1664,7 @@ URL: \url{https://www.compute.dtu.dk/english/research/research-sections/dynsys/}
 
 \address{
 Mikkel L. Sørensen\\
-Dynamical Systems\\
-Department of Applied Mathematics and Computer Science\\
-Technical University of Denmark\\
+Dynamical Systems, Department of Applied Mathematics and Computer Science, Technical University of Denmark\\
 Asmussens Allé, Building 303B\\
 2800 Kgs. Lyngby, Denmark\\
 E-mail: \email{mliso@dtu.dk}\\
@@ -1681,9 +1673,7 @@ URL: \url{https://www.compute.dtu.dk/english/research/research-sections/dynsys/}
 
 \address{
 Julian Lemos-Vinasco\\
-Dynamical Systems\\
-Department of Applied Mathematics and Computer Science\\
-Technical University of Denmark\\
+Dynamical Systems, Department of Applied Mathematics and Computer Science, Technical University of Denmark\\
 Asmussens Allé, Building 303B\\
 2800 Kgs. Lyngby, Denmark\\
 E-mail: \email{jlvi@dtu.dk}\\
@@ -1692,9 +1682,7 @@ URL: \url{https://www.compute.dtu.dk/english/research/research-sections/dynsys/}
 
 \address{
 Jon Liisberg\\
-Dynamical Systems\\
-Department of Applied Mathematics and Computer Science\\
-Technical University of Denmark\\
+Dynamical Systems, Department of Applied Mathematics and Computer Science, Technical University of Denmark\\
 Asmussens Allé, Building 303B\\
 2800 Kgs. Lyngby, Denmark\\
 E-mail: \email{jlvi@dtu.dk}\\
@@ -1703,9 +1691,7 @@ URL: \url{https://www.compute.dtu.dk/english/research/research-sections/dynsys/}
 
 \address{
 Jan Kloppenborg Møller\\
-Dynamical Systems\\
-Department of Applied Mathematics and Computer Science\\
-Technical University of Denmark\\
+Dynamical Systems, Department of Applied Mathematics and Computer Science, Technical University of Denmark\\
 Asmussens Allé, Building 303B\\
 2800 Kgs. Lyngby, Denmark\\
 E-mail: \email{jkmo@dtu.dk}\\
@@ -1723,9 +1709,7 @@ URL: \url{https://www.enfor.dk}
 
 \address{
 Henrik Madsen\\
-Dynamical Systems\\
-Department of Applied Mathematics and Computer Science\\
-Technical University of Denmark\\
+Dynamical Systems, Department of Applied Mathematics and Computer Science, Technical University of Denmark\\
 Asmussens Allé, Building 303B\\
 2800 Kgs. Lyngby, Denmark\\
 E-mail: \email{hmad@dtu.dk}\\
