--- a/_articles/RJ-2023-032/RJ-2023-032.Rmd
+++ b/_articles/RJ-2023-032/RJ-2023-032.Rmd
@@ -19,20 +19,22 @@ abstract: ' Multi-state models can be used to describe processes in which an ind
   package are illustrated using real data examples. '
 author:
 - name: Gustavo Soutinho
-  affiliation: EPIUnit
+  affiliation: |-
+    EPIUnit, Institute of Public Health of the University of Porto
+    (ISPUP)
   email: |
     gdsoutinho@gmail.com
   address:
-  - Institute of Public Health of the University of Porto (ISPUP)
   - Rua das Taipas 135, 4050-600 Porto
   - Portugal
   - 'ORCID: 0000-0002-0559-1327'
 - name: Luís Meira-Machado
-  affiliation: Department of Mathematics & Centre of Mathematics
+  affiliation: |-
+    Department of Mathematics & Centre of Mathematics, University of
+    Minho
   email: |
     lmachado@math.uminho.pt
   address:
-  - University of Minho
   - Campus de Azurém - 4800-058 Guimarães
   - Portugal
   - 'ORCID: 0000-0002-8577-7665'
