--- a/_articles/RJ-2023-032/Soutinho.tex
+++ b/_articles/RJ-2023-032/Soutinho.tex
@@ -638,15 +638,14 @@ This research was financed by Portuguese Funds through FCT - "Funda\c{c}\~{a}o p
 \bibliography{paper}
 
 \address{Gustavo Soutinho\\
-EPIUnit\\
-  Institute of Public Health of the University of Porto (ISPUP)\\
+  EPIUnit, Institute of Public Health of the University of Porto (ISPUP)\\
   Rua das Taipas 135, 4050-600 Porto\\
   Portugal\\
   ORCID: 0000-0002-0559-1327\\
   \email{gdsoutinho@gmail.com}}
 
 \address{Lu\'{i}s Meira-Machado\\
-  Department of Mathematics \& Centre of Mathematics\\ University of Minho\\
+  Department of Mathematics \& Centre of Mathematics, University of Minho\\
   Campus de Azur\'{e}m - 4800-058 Guimar\~{a}es\\
   Portugal\\
   ORCID: 0000-0002-8577-7665\\
