--- a/_articles/RJ-2023-036/RJ-2023-036.Rmd
+++ b/_articles/RJ-2023-036/RJ-2023-036.Rmd
@@ -26,7 +26,7 @@ author:
     Faculty of Mathematics and Information Science, Warsaw University of
     Technology
   email: |
-    pgrzeg@pw.edu.pl
+    przemyslaw.grzegorzewski@pw.edu.pl
   address:
   - Koszykowa 75, 00-662 Warsaw
   - Poland
@@ -38,7 +38,7 @@ date: '2023-08-26'
 date_received: '2022-06-07'
 journal:
   firstpage: 271
-  lastpage: 283
+  lastpage: 284
 volume: 15
 issue: 1
 slug: RJ-2023-036
@@ -56,7 +56,6 @@ output:
     legacy_pdf: yes
 
 ---
-
 
 
 
