--- a/_articles/RJ-2023-036/fuzzyResampling.tex
+++ b/_articles/RJ-2023-036/fuzzyResampling.tex
@@ -580,7 +580,7 @@ Obviously, many problems are still open. New methods and algorithms that would b
         Newelska 6, 01-447 Warsaw\\
         Poland\\
     (0000-0002-5191-4123)\\
-    \email{pgrzeg@pw.edu.pl}}
+    \email{przemyslaw.grzegorzewski@pw.edu.pl}}
   
   
 
