--- a/_articles/RJ-2023-039/RJ-2023-039.Rmd
+++ b/_articles/RJ-2023-039/RJ-2023-039.Rmd
@@ -15,36 +15,48 @@ abstract: ' The R package [emdi](https://CRAN.R-project.org/package=emdi) facili
   results exportation options enable a complete analysis procedure. The functionality
   of the package is illustrated by examples based on synthetic data for Austrian districts. '
 author:
-- name: Sylvia Harmening, Ann-Kristin Kreutzmann, Sören Schmidt
-  affiliation: Institute for Statistics and Econometrics
-  email:
-  - |-
-    sylvia.harmening@fu-berlin.de,
-    email:ann-kristin.kreutzmann@fu-berlin.de,
-  - |
+- name: Sylvia Harmening
+  affiliation: |-
+    Institute for Statistics and Econometrics, School of Business &
+    Economics, Freie Universität Berlin
+  email: |
+    sylvia.harmening@fu-berlin.de
+  address:
+  - Garystr. 21, 14195 Berlin
+  - Germany
+- name: Ann-Kristin Kreutzmann
+  affiliation: |-
+    Institute for Statistics and Econometrics, School of Business &
+    Economics, Freie Universität Berlin
+  email: |
+    ann-kristin.kreutzmann@fu-berlin.de
+  address:
+  - Garystr. 21, 14195 Berlin
+  - Germany
+- name: Sören Schmidt
+  affiliation: |-
+    Institute for Statistics and Econometrics, School of Business &
+    Economics, Freie Universität Berlin
+  email: |
     soeren.pannier@fu-berlin.de
   address:
-  - School of Business & Economics
-  - Freie Universität Berlin
   - Garystr. 21, 14195 Berlin
   - Germany
 - name: Nicola Salvati
-  affiliation: Department of Economics and Management
+  affiliation: Department of Economics and Management, University of Pisa
   email: |
     nicola.salvati@unipi.it
   address:
-  - University of Pisa
   - Via C. Ridolfi, 10 56124 Pisa
   - Italy
 - name: Timo Schmid
-  affiliation: Institute of Statistics
+  affiliation: Institute of Statistics, Otto-Friedrich-Universität Bamberg
   email: |
     timo.schmid@uni-bamberg.de
   address:
-  - Otto-Friedrich-Universität Bamberg
   - Feldkirchenstr. 21, 96052 Bamberg
   - Germany
-date: '2023-09-07'
+date: '2023-09-24'
 date_received: '2022-09-13'
 journal:
   firstpage: 316
@@ -66,8 +78,6 @@ output:
     legacy_pdf: yes
 
 ---
-
-
 
 
 
@@ -645,7 +655,7 @@ The emdi package version 1.1.7 contains a sample
 
 The generation process for both data sets is extensively described in
 @emdi2019. Our process is nearly equivalent, but we do not produce
-out-of-sample domains for the area-level version of the data sets The
+out-of-sample domains for the area-level version of the data sets. The
 Austrian European Union Statistics on Income and Living Conditions
 (EU-SILC) synthetic 2006 data set ( eusilcP) sourced from the
 [simFrame](https://CRAN.R-project.org/package=simFrame) package
@@ -972,7 +982,7 @@ MSE = TRUE, B = c(0,50))
 
 **Assess the estimated model**\
 In many publications using FH models, model diagnostics are discussed
-only briefly, if at all.. One reason for this might be the lack of an
+only briefly, if at all. One reason for this might be the lack of an
 existing implementation of desired diagnostic measures in R or other
 statistical software. The summary method of emdi provides additional
 information about the data and model components, in particular the
